--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,26 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+#root {
+  width: 100%;
+  height: 100vh;
+}
+
+:focus {
+  outline: none;
+}
+
+@font-face {
+  font-family: LiberationSans;
+  src: url(./fonts/LiberationSans-Regular.ttf);
+}
+
+@font-face {
+  font-family: FranklinGothicBook;
+  src: url(./fonts/franklingothic-book.otf);
+}
+
+@font-face {
+  font-family: GhostLight;
+  src: url(./fonts/Ghostlight-Regular.ttf);
+}
