--- a/src/components/SiteDetails/SiteDetails.module.css
+++ b/src/components/SiteDetails/SiteDetails.module.css
@@ -20,6 +20,17 @@
   border-radius: 30px;
 }
 
+.leftPane {
+  flex: 1 1 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rightPane {
+  flex: 1 1 40%;
+}
+
 .siteDetailBackground {
   background: linear-gradient(to bottom, #404040 0%, black 100%);
   border-radius: 30px;
@@ -28,7 +39,7 @@
   height: 75vh;
   position: absolute;
   z-index: -1;
-  opacity: 0.60;
+  opacity: 0.6;
 }
 
 .bottom-enter {
@@ -62,44 +73,4 @@
   top: 60px;
   cursor: pointer;
   padding: 1rem;
-}
-
-.imageDetails {
-  height: 600px;
-}
-
-.image {
-  display: block;
-  margin: auto;
-}
-
-.moreDetailsPerson {
-  font-size: 18pt;
-}
-
-.moreDetails {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  position: relative;
-  top: -20px;
-  height: 85%;
-}
-
-.personMore {
-  font-size: 24px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-}
-
-.learnMore {
-  width: 75%;
-  margin-top: 20px;
-  padding-left: 10%;
-  padding-right: 10%;
-  line-height: 30px;
-  overflow: auto;
-  overflow-x: hidden;
 }
