--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
 #root {
   width: 100%;
   height: 100vh;
@@ -25,4 +20,15 @@ body {
 @font-face {
   font-family: GhostLight;
   src: url(./fonts/Ghostlight-Regular.ttf);
+}
+
+body {
+  text-align: center;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-image: url("./img/Background.png");
+  opacity: 0.75;
+  z-index: 50;
 }
