fix(App): Fix reset timer

--- a/src/components/StorySelector/StorySelector.module.css
+++ b/src/components/StorySelector/StorySelector.module.css
@@ -34,9 +34,51 @@
   padding-top: 1rem;
 }
 
-.story:hover,
+@keyframes scale {
+  0% {
+  }
+  50% {
+    transform: scale(1.25);
+  }
+}
+
+@-webkit-keyframes scale {
+  0% {
+  }
+  50% {
+    -webkit-transform: scale(1.25);
+  }
+}
+
+@-moz-keyframes scale {
+  0% {
+  }
+  50% {
+    -moz-transform: scale(1.25);
+  }
+}
+
+@-ms-keyframes scale {
+  0% {
+  }
+  50% {
+    -ms-transform: scale(1.25);
+  }
+}
+
+@-o-keyframes scale {
+  0% {
+  }
+  50% {
+    -o-transform: scale(1.25);
+  }
+}
+
 .story:focus {
-  transform: scale(1.25);
+  -webkit-animation: scale 0.5s ease-in-out 0s;
+  -moz-animation: scale 0.5s ease-in-out 0s;
+  -o-animation: scale 0.5s ease-in-out 0s;
+  animation: scale 0.5s ease-in-out 0s;
 }
 
 .background {
