--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -41,5 +41,8 @@
 }
 
 .animation {
-  padding-left: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  padding-bottom: 3rem;
 }
