--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -25,12 +25,13 @@
   max-width: 600px;
   margin: 0rem 2rem;
   display: block;
+  padding-bottom: 2rem;
 }
 
 .subTitle {
   font-size: 24px;
   font-weight: 600;
-  margin: 2rem 0rem 1.5rem;
+  margin: 0rem 0rem 1.5rem;
   padding: 0rem 3rem;
 }
 
