--- a/src/components/StorySelector/StorySelector.module.css
+++ b/src/components/StorySelector/StorySelector.module.css
@@ -5,7 +5,7 @@
   bottom: 0;
   right: 0;
   height: 300px;
-  width: 50%;
+  width: 75%;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-around;
@@ -25,8 +25,8 @@
 }
 
 .image {
-  height: 100px;
-  width: 100px;
+  height: 234;
+  width: 234;
   border: 1px solid white;
 }
 
