--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   align-items: flex-start;
   height: 95%;
-  padding-top: 1rem;
+  padding-top: 5rem;
   overflow-x: hidden;
   color: #d9d0ad;
   font-family: LiberationSans;
-  font-size: 22px;
+  font-size: 26px;
 }
 
 .title {
@@ -17,7 +17,7 @@
   font-weight: 500;
   color: #f58f00;
   text-transform: uppercase;
-  font-size: 28pt;
+  font-size: 32pt;
   font-family: GhostLight;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .subTitle {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 600;
   margin: 0rem 0rem 1.5rem;
   padding: 0rem 3rem;
@@ -46,5 +46,6 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
-  padding-bottom: 3rem;
+  padding-right: 4rem;
+  padding-bottom: 10rem;
 }
