--- a/src/components/StorySelector/StorySelector.module.css
+++ b/src/components/StorySelector/StorySelector.module.css
@@ -4,8 +4,8 @@
   left: 0;
   bottom: 0;
   right: 0;
-  height: 300px;
-  width: 75%;
+  height: 500px;
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-around;
@@ -25,8 +25,8 @@
 }
 
 .image {
-  height: 234;
-  width: 234;
+  height: 300px;
+  width: 300px;
   border: 1px solid white;
 }
 
@@ -86,10 +86,14 @@
   background: black;
   background-size: 100% 100%;
   width: 100%;
-  height: 300px;
+  height: 500px;
   position: absolute;
   bottom: 0;
   left: 0;
   z-index: -1;
   opacity: 0.125;
+}
+
+.name {
+  font-size: 24px;
 }
